# navegacao-robos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
bug2_bag/: metadata.yaml
tangent_bag/: metadata.yaml
ws/src/tb3_bug_nav_classic/: package.xml  passos.txt  setup.cfg  setup.py
ws/src/tb3_bug_nav_classic/launch/: bug2_classic.launch.py  tangent_classic.launch.py
ws/src/tb3_bug_nav_classic/tb3_bug_nav_classic/: bug2_node.py  tangent_bug_node.py  utils.py
ws/src/tb3_bug_nav_classic/worlds/: bug_world.world
