<?xml version="1.0"?>
<package format="3">
  <name>tb3_bug_nav_classic</name>
  <version>0.1.0</version>
  <description>Bug1 and TangentBug for TurtleBot3 on Gazebo Classic (ROS2 Humble)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_description</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

